--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ ipywidgets==8.1.3
 isoduration==20.11.0
 jedi==0.19.1
 Jinja2==3.1.4
+joblib==1.4.2
 json5==0.9.25
 jsonpointer==3.0.0
 jsonschema==4.23.0
@@ -65,6 +66,7 @@ packaging==24.1
 pandas==2.2.2
 pandocfilters==1.5.1
 parso==0.8.4
+patsy==0.5.6
 pexpect==4.9.0
 pillow==10.4.0
 platformdirs==4.2.2
@@ -91,6 +93,7 @@ requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.19.0
+scikit-learn==1.5.1
 scipy==1.14.0
 seaborn==0.13.2
 Send2Trash==1.8.3
@@ -101,6 +104,7 @@ soupsieve==2.5
 stack-data==0.6.3
 tenacity==8.5.0
 terminado==0.18.1
+threadpoolctl==3.5.0
 tinycss2==1.3.0
 tornado==6.4.1
 traitlets==5.14.3
